# jwtxx

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Doxyfile  LICENSE  MIGRATION.md  README.md
.github/: constants.env
.github/workflows/: ci.yml
checks/: checkoverride.cpp  openssl_bio_new_mem_buf.c
cmake/: version.cmake
cmake/modules/: CodeCoverage.cmake  FindJansson.cmake
docs/: annotated.html  class_j_w_t_x_x_1_1_error-members.html  class_j_w_t_x_x_1_1_j_w_t-members.html  class_j_w_t_x_x_1_1_j_w_t.html  class_j_w_t_x_x_1_1_j_w_t_1_1_error-members.html  class_j_w_t_x_x_1_1_j_w_t_1_1_parse_error-members.html  class_j_w_t_x_x_1_1_j_w_t_1_1_validation_error-members.html  class_j_w_t_x_x_1_1_key-members.html  class_j_w_t_x_x_1_1_key.html  class_j_w_t_x_x_1_1_key_1_1_error-members.html  class_j_w_t_x_x_1_1_validation_result-members.html  class_j_w_t_x_x_1_1_validation_result.html  class_j_w_t_x_x_1_1_value-members.html  class_j_w_t_x_x_1_1_value.html  classes.html  dir_cbd0c1630137b12302b80799dec40aec.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  error_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  hierarchy.html  index.html  ios_8h.html  ios_8h_source.html  jwt_8h.html  jwt_8h_source.html  menudata.js  namespace_j_w_t_x_x.html  namespace_j_w_t_x_x_1_1_validate.html  namespace_validate.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  struct_j_w_t_x_x_1_1_error-members.html  struct_j_w_t_x_x_1_1_error.html  (+12 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+16 more)
examples/: CMakeLists.txt  claims_types_example.cpp  hs256_example.cpp  key_reuse_example.cpp  private-key.pem  public-key.pem  rs256_example.cpp  validation_example.cpp
include/: CMakeLists.txt
include/jwtxx/: CMakeLists.txt  error.h  ios.h  jwt.h  value.h  version.h.in
src/: CMakeLists.txt  asymmetric.h  base64url.h  eckey.h  hmackey.h  json.cpp  json.h  jwt.cpp  keyimpl.h  nonekey.h  pemkey.h  rsakey.h  utils.cpp  utils.h
tests/: CMakeLists.txt  ecdsa-256-key-pair-pw.pem  ecdsa-256-key-pair.pem  ecdsa-cert.csr  ecdsa-cert.pem  ecdsatest.cpp  hmactest.cpp  initopenssl.h  keyvalidationtest.cpp  nonetest.cpp  public-ecdsa-256-key.pem  public-rsa-2048-key.pem  rsa-2048-key-pair-pw.pem  rsa-2048-key-pair.pem  rsa-cert.csr  rsa-cert.pem  rsatest.cpp  valuetest.cpp
tools/: CMakeLists.txt  jwttool.cpp  toolversion.h.in
